✨ Attributesを追加
